buildscript {
    ext {
		springBootVersion = '2.7.1'
	}
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://repo.spring.io/release" }
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.maven.apache.org/maven2/org/springframework/boot/org.springframework.boot.gradle.plugin" }
    }

    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
    }
}

/*
 * Extra Properties
 */
ext {
    /*
     * Software versions
     */
    mysqlConnectorVersion = "5.1.49"
}

apply plugin:'java' 
apply plugin: 'org.springframework.boot'
/*
 * The dependency management plugin remains a transitive dependency of spring-boot-gradle-plugin
 * so there's no need for it to be listed as a classpath dependency in the buildscript configuration. */
apply plugin: 'io.spring.dependency-management'
/*
apply plugin: 'maven'
*/
apply plugin: 'maven-publish'




group = "gov.nih.nci.evs.reportwriter.core"
version = "1.0.9-SNAPSHOT"
sourceCompatibility = 1.8

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

bootJar {
    enabled = false;
}

jar {
    enabled = true
}

springBoot {
    buildInfo()          // generate file META-INF/build-info.properties during the build
}


 repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://repo.spring.io/release" }
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://repo.spring.io/snapshot" }
    }


dependencies {
    implementation ('org.springframework.boot:spring-boot-starter')
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation 'org.springframework.boot:spring-boot-actuator'
    implementation 'org.springframework.boot:spring-boot-devtools'

    implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
    implementation "org.apache.poi:poi:3.17"
    implementation "org.apache.poi:poi-ooxml:3.17"
    implementation "mysql:mysql-connector-java:$mysqlConnectorVersion"
    implementation "org.apache.poi:poi-ooxml:3.17"
    
    /*
     * Test Dependencies
     */
   
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}



test {
    /*
     * Configure gradle to show standard out and standard error
     * of the test JVM(s) on the console
     */
    testLogging.showStandardStreams = true

    /*
     * Activate the 'test' profile
     */
    systemProperties 'spring.profiles.active': 'test'
}



